Refactor AssignCaseAccessService